--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "npm run generate && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.5.0 added mailerlite embed instead of popup  \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "npm run generate && git add . && git commit -m \"deploy: v3.5.1 pwa?  \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
+    
   },
   "devDependencies": {
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0",
     "push-dir": "^0.4.1"
