--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "npm run generate && cp _headers dist/ && cp ads.txt dist/ && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.7.0 added visual categories of key info: category, decomposition time and carbon nitrogen ratio \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "npm run generate && cp _headers dist/ && cp ads.txt dist/ && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.7.1 added cheesecloth \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "nuxt": "3.0.0",
