--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "deploy": "npm run generate && cp _headers dist/ && cp ads.txt dist/ && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.8.3.1 updated sitemap, added dry-beans content \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
-    "@nuxt/image": "^1.0.0-rc.1",
+    "@nuxt/image": "^0.7.1",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "3.0.0",
+    "nuxt": "^3.1.0",
     "push-dir": "^0.4.1"
   },
   "dependencies": {
