--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "deploy": "npm run generate && cp _headers dist/ && cp ads.txt dist/ && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.8.6.13 update 10 items   \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
+    "deploy": "npm run generate && cp _headers dist/ && cp ads.txt dist/ && cp sitemap.xml dist/ && cp .htaccess dist/ && cp favicon.ico dist/ && git add . && git commit -m \"deploy: v3.8.6.15 repush   \" && git push && push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "devDependencies": {
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/tailwindcss": "^6.1.3",
-    "nuxt": "^3.1.0",
+    "nuxt": "3.8.2",
     "push-dir": "^0.4.1"
   },
   "dependencies": {
